--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,10 @@ language: node_js
 node_js:
   - "12.19.0"
 script:
-  - echo "Deploying!"
+  - echo "Testing.."
+  - ls
 install:
   - npm install -g firebase-tools
 after-success:
+  - echo "Test done, deploying now..."
   - firebase deploy --token $FIREBASE_TOKEN
