--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: node_js
 node_js:
   - "12.19.0"
+script:
+  - echo "Deploying"
 install:
   - npm install -g firebase-tools
 after-success:
